[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/GUI/Settings.gd" type="Script" id=1]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 54.0
margin_right = -105.0
margin_bottom = -122.0

[node name="Global_Vol" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 904.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Global_Vol"]
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "Global"

[node name="Global_Vol" type="HSlider" parent="Panel/VBoxContainer/Global_Vol"]
margin_left = 45.0
margin_right = 61.0
margin_bottom = 16.0
min_value = -45.0
max_value = 0.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Global_Vol"]
margin_left = 65.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 15.0

[node name="SFX_Slider" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 20.0
margin_right = 904.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/SFX_Slider"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 15.0
text = "SFX"

[node name="SFX_Slider" type="HSlider" parent="Panel/VBoxContainer/SFX_Slider"]
margin_left = 26.0
margin_right = 42.0
margin_bottom = 16.0
min_value = -45.0
max_value = 0.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/SFX_Slider"]
margin_left = 46.0
margin_top = 1.0
margin_right = 46.0
margin_bottom = 15.0

[node name="Music_Slider" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 904.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Music_Slider"]
margin_top = 1.0
margin_right = 38.0
margin_bottom = 15.0
text = "Music"

[node name="Music_Slider" type="HSlider" parent="Panel/VBoxContainer/Music_Slider"]
margin_left = 42.0
margin_right = 58.0
margin_bottom = 16.0
min_value = -45.0
max_value = 0.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Music_Slider"]
margin_left = 62.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 60.0
margin_right = 904.0
margin_bottom = 60.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 904.0
margin_bottom = 64.0

[node name="Controls" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 904.0
margin_bottom = 88.0
columns = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls"]
margin_top = 3.0
margin_bottom = 17.0

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls"]
margin_left = 4.0
margin_right = 16.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -94.0

[connection signal="value_changed" from="Panel/VBoxContainer/Global_Vol/Global_Vol" to="." method="_on_Global_Vol_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFX_Slider/SFX_Slider" to="." method="_on_SFX_Slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Music_Slider/Music_Slider" to="." method="_on_Music_Slider_value_changed"]
